--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,16 @@
             <artifactId>disruptor</artifactId>
             <version>3.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.2.1</version>
+        </dependency>
     </dependencies>
 
     <repositories>
