--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,11 @@
             <artifactId>jedis</artifactId>
             <version>2.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
+        </dependency>
     </dependencies>
 
     <repositories>
