--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -13,3 +13,4 @@ log4j.appender.logfile.layout.ConversionPattern=%d{yy-MM-dd HH:mm:ss} %5p %c{1}:
 log4j.rootLogger=info, stdout
 
 log4j.logger.com.rpg.rocket=debug
+log4j.logger.io.netty=debug
